--- a/src/features/home/App.less
+++ b/src/features/home/App.less
@@ -1,45 +1,55 @@
 @import '../../styles/mixins.less';
 
 .home-app {
-  height: 100%;
-
-  .sidebar {
-    position: fixed;
-    box-sizing: border-box;
-    overflow: auto;
-    top: 0;
-    left: 0;
-    margin: 0;
-    padding: 40px;
-    width: 260px;
     height: 100%;
-    background-color: #f7f7f7;
 
-    li {
-      padding: 2px;
-      a {
-        border-bottom: none;
-      }
+    .menus{
+        text-align: center;
+        display: inline;
+
+        li{
+            display: inline;
+            margin-right: 10px
+        }
     }
 
-    .memo {
-      &:before {
-        content: ' ';
-        display: block;
-        height: 2px;
-        width: 60px;
-        margin-bottom: 10px;
-        background-color: #ddd;
-      }
-      font-size: 13px;
-      margin-top: 40px;
-      line-height: 150%;
-      color: #aaa;
-    }
-  }
+    .sidebar {
+        position: fixed;
+        box-sizing: border-box;
+        overflow: auto;
+        top: 0;
+        left: 0;
+        margin: 0;
+        padding: 40px;
+        width: 260px;
+        height: 100%;
+        background-color: #f7f7f7;
 
-  .page-container {
-    padding: 40px 30px 0 300px;
-    max-width: 800px;
-  }
+        li {
+            padding: 2px;
+            a {
+                border-bottom: none;
+            }
+        }
+
+        .memo {
+            &:before {
+                content: ' ';
+                display: block;
+                height: 2px;
+                width: 60px;
+                margin-bottom: 10px;
+                background-color: #ddd;
+            }
+            font-size: 13px;
+            margin-top: 40px;
+            line-height: 150%;
+            color: #aaa;
+        }
+    }
+
+    .page-container {
+        padding: 30px;
+        max-width: 800px;
+    }
 }
