--- a/src/features/home/App.less
+++ b/src/features/home/App.less
@@ -1,8 +1,10 @@
 @import '../../styles/mixins.less';
 
-.home-app {
-    height: 100%;
+.websiteTitle{
+    font-size: 15px;
+}
 
+.home-app {
     .menus{
         text-align: center;
         display: inline;
@@ -11,45 +13,5 @@
             display: inline;
             margin-right: 10px
         }
-    }
-
-    .sidebar {
-        position: fixed;
-        box-sizing: border-box;
-        overflow: auto;
-        top: 0;
-        left: 0;
-        margin: 0;
-        padding: 40px;
-        width: 260px;
-        height: 100%;
-        background-color: #f7f7f7;
-
-        li {
-            padding: 2px;
-            a {
-                border-bottom: none;
-            }
-        }
-
-        .memo {
-            &:before {
-                content: ' ';
-                display: block;
-                height: 2px;
-                width: 60px;
-                margin-bottom: 10px;
-                background-color: #ddd;
-            }
-            font-size: 13px;
-            margin-top: 40px;
-            line-height: 150%;
-            color: #aaa;
-        }
-    }
-
-    .page-container {
-        padding: 30px;
-        max-width: 800px;
     }
 }
